#:tombi schema.strict = false

[project]
name = "mknodes"
version = "2.2.12"
description = "Don't write docs. Code them."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
  { name = "Philipp Temminghoff", email = "philipptemminghoff@gmail.com" },
]
keywords = [
  "docs",
  "docstrings",
  "documentation",
  "framework",
  "internet",
  "markdown",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: MkDocs",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Documentation",
  "Topic :: Internet",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  # TODO: make these optional
  "agentpool[default]>=0.99.54",
  "anybadge",
  "anyenv[httpx]>=1.9.0",
  "clinspector",
  "coloraide",
  "epregistry",
  "fieldz",
  # HTTP / Remote
  "fsspec",
  "git-changelog",
  "githarbor",
  # Git(Hub)
  "gitpython",
  "griffe",
  "jinja2",
  "jinjarope[icons]",
  "mkdocstrings[python]",
  "natsort",
  "pipdeptree",
  "pydantic",
  # Tools
  "pytest-asyncio>=1.3.0",
  "python-dotenv",
  # Serialization
  "setuptools>=80.9.0",
  "tomli-w",
  "typer>=0.12.0",
  "universal_pathlib",
  "upathtools[httpx]",
  "yamling",
  # "marimo>=0.11.2; python_version < '3.14'",
  "zensical>=0.0.11",
]

[project.urls]
"Code coverage" = "https://app.codecov.io/gh/phil65/mknodes"
Discussions = "https://github.com/phil65/mknodes/discussions"
Documentation = "https://phil65.github.io/mknodes/"
Issues = "https://github.com/phil65/mknodes/issues"
Source = "https://github.com/phil65/mknodes"

[project.scripts]
mknodes = "mknodes.cli:main"

[project.entry-points."jinjarope.environment"]
mknodes = "mknodes.jinja:setup_env"

[project.entry-points."markdown.extensions"]
"mknodes.execute" = "mknodes.mdext.execute_ext:makeExtension"

[project.optional-dependencies]
llm = ["agentpool[default]"]

[dependency-groups]
dev = [
  # black is used by mkdocstrings to format signatures
  "black",
  # Material Social addon
  "cairosvg; python_version < '3.14'",
  "markdown-exec[ansi]",
  "mkdocs-material >= 9.4",
  "mkdocs_mknodes>= 1.0",
  # Docs
  "mkdocs >=1.5",
  # Linting
  "mypy",
  "pillow; python_version < '3.14'",
  "pydeps",
  "pygments",
  "pyinstrument",
  # "mkdocs_mknodes @ git+https://github.com/phil65/mkdocs_mknodes.git@main",
  "pymdown-extensions",
  # Debugging
  "pyreadline3",
  # Testing
  "pytest",
  "pytest-codspeed",
  "pytest-cov",
  "pytest-snapshot>=0.9.0",
  "ruff",
  "types-Markdown",
  "types-python-dateutil",
  "types-pyyaml>=6.0.12.20250915",
  "types-requests",
]

[build-system]
requires = ["uv_build>=0.8.22"]
build-backend = "uv_build"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "@overload",
  "except ImportError",
  'if __name__ == "__main__":',
]

[tool.git-changelog]
filter-commits = "v0.30.0.."

[tool.mknodes]
allowed-commit-types = [
  "fix",
  "feat",
  "refactor",
  "docs",
  "test",
  "build",
  "chore",
]
docstring-style = "google"

[tool.mypy]
python_version = "3.13"
pretty = true
check_untyped_defs = true
exclude = ["venv/", ".venv/", "tests/"]
plugins = []

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "basic"
deprecateTypingAliases = true
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportUnknownVariableType = false
reportAny = false
reportImplicitOverride = false
reportUnusedFunction = false
reportImplicitStringConcatenation = false
reportIgnoreCommentWithoutRule = false
reportUnannotatedClassAttribute = false
reportSelfClsParameterName = false
reportPrivateImportUsage = false

[tool.pytest]
addopts = ["--cov-report=term-missing", "--cov=mknodes/"]
log_cli = true
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s %(levelname)s %(message)s"
markers = [
  "integration: marks tests as integration tests (deselected by default)",
]
minversion = "9.0"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
extend-exclude = ["docs"]
target-version = "py313"

[tool.ruff.lint]
future-annotations = true
select = [
  "A",  # Flake8-builtins
  # "ANN",  # Flake8-Annotations
  # "ASYNC",  # Flake8-Async
  # "ARG",  # # Flake8-Unused-Arguments
  "B",  # flake8-bugbear
  "BLE",  # Flake8-blind-except
  "C",
  "C4",  # flake8-comprehensions
  # "C90",  # MCCabe
  "COM",  # Flake8-commas
  # "CPY",  #  Copyright-related rules
  "D",  # PyDocStyle
  # "DTZ",  # Flake8- Datetimez
  "E",  # PyCodeStyle Error
  "EM",  # flake8-errmsg
  # "ERA",  #  Eradicate
  "EXE",  # flake8-executable
  "F",  # PyFlakes
  "FA",  # flake8-future-annotations
  # "FBT",  # flake8-boolean-trap
  # "FIX",  # flake8-fixme
  "FLY",  # flynt
  "G",  # flake8-logging-format
  "I",  # ISort
  "ICN",  # Flake8-import-conventions
  "INP",  # flake8-no-pep420
  "INT",  # flake8-gettext
  "ISC",  # flake8-implicit-str-concat
  "N",  # pep8-naming
  # "NPY",  # numpy-specific rules
  # "PD",   # pandas-vet
  "PERF",  # perflint
  # "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PLE",  # PyLint Error
  "PLC",  # PyLint convention
  # "PLW",  # PyLint Warning
  "PLR",  # PyLint refactor
  "PT",  # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "PYI",  # flake8-pyi
  "Q",  # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff-specific rules
  # "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self
  "SLOT",  # flake8-slots
  # "T",
  # "TD",   # flake8-todos
  "T10",  # flake8-debugger
  # "T20",  # flake8-print
  "TC",  # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "TRY",  # tryceratops
  "UP",  # PyUpgrade
  "W",  # PyCodeStyle warning
  "YTT",  # flake8-2020
]
ignore = [
  "C408",  # Unnecessary {obj_type} call (rewrite as a literal)
  "B905",  # zip() without an explicit strict= parameter
  "C901",  # {name} is too complex ({complexity} > {max_complexity})
  # "CPY001", # Missing copyright notice at top of file
  "D100",  # Missing docstring in public module
  "D101",  # Missing docstring in public class
  "D102",  # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104",  # Missing docstring in public package
  "D105",  # Missing docstring in magic method
  "D106",  # Missing docstring in public nested class
  "D107",  # Missing docstring in __init__
  "D203",  # 1 blank line required before class docstring
  "D204",  # 1 blank line required after class docstring
  "D213",  # Multi-line docstring summary should start at the second line
  "D215",  # Section underline is over-indented ("{name}")
  "D400",  # First line should end with a period
  "D401",  # First line of docstring should be in imperative mood: "{first_line}"
  "D404",  # First word of the docstring should not be "This"
  "D406",  # Section name should end with a newline ("{name}")
  "D407",  # Missing dashed underline after section ("{name}")
  "D408",  # Section underline should be in the line following the section's name ("{name}")
  "D409",  # Section underline should match the length of its name ("{name}")
  "D413",  # Missing blank line after last section ("{name}")
  "N813",
  "PLC0415",  # imports at top of file
  "PLC2701",  # private import
  "PLR0904",  # Too many public methods
  "PLR0912",  # Too many branches
  "PLR0913",  # Too many arguments to function call
  "PLR0915",  # Too many statements
  "PLR0917",  # Function with too many params
  "PLR6301",  # Function could be static, ...
  "SLF001",  # Private member accessed
  "RUF012",  # Mutable class attributes should be annotated
  "TRY003",  # Avoid specifying long messages outside the exception class
  "COM812",
  "COM819",
  "D206",
  "E501",
  "ISC001",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",  # for ruff-format
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "sqlalchemy.orm.DeclarativeBase",
  "schemez.Schema",
  "sqlmodel.SQLModel",
]
runtime-evaluated-decorators = [
  "pydantic.validate_call",
  "fastapi.FastAPI.get",
  "fastapi.FastAPI.post",
  "fastmcp.FastMCP.tool",
  "typer.Typer.command",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
# lines-between-types = 1
# atomic = true
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "I001"]
"scripts/*" = ["INP001"]
"*tests/*" = ["D100"]

[tool.ruff.format]
preview = true
docstring-code-format = true

[tool.uv.build-backend]
wheel-exclude = [
  ".mypy_cache/**",
  "__pycache__/**",
  "*.pyc",
  "*.pyo",
  ".pytest_cache/**",
  ".ruff_cache/**",
]
source-exclude = [
  ".mypy_cache/**",
  "__pycache__/**",
  "*.pyc",
  "*.pyo",
  ".pytest_cache/**",
  ".ruff_cache/**",
]
